// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Product /> should not render if not product is supplied 1`] = `""`;

exports[`<Product /> should render a product with selected variants 1`] = `
<div
  className={
    Object {
      "data-css-g4i9nv": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1f7wp8g": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-19shpyr": "",
        }
      }
    >
      <WithWidgetSettings(ProductImage)
        src="http://www.some.com"
      />
    </div>
    <div
      className={
        Object {
          "data-css-yp5sfk": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-9xm049": "",
          }
        }
      >
        <Ellipsis
          className=""
          ellipsis="..."
          rows={3}
        >
          Test Product
        </Ellipsis>
      </div>
      <div
        className={
          Object {
            "data-css-mlrmmn": "",
          }
        }
        data-test-id="selected-variants"
      >
        <div
          key="test-test"
        >
          test: test
        </div>
      </div>
      <div
        className={
          Object {
            "data-css-1f7wp8g": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-14jedxl": "",
            }
          }
        >
          Ready for pick up in 1-3 days in
        </div>
        <div
          className={
            Object {
              "data-css-hhr8nm": "",
            }
          }
        >
          13 Stores
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Product /> should render a product without selected variants. 1`] = `
<div
  className={
    Object {
      "data-css-g4i9nv": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1f7wp8g": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-19shpyr": "",
        }
      }
    >
      <WithWidgetSettings(ProductImage)
        src="http://www.some.com"
      />
    </div>
    <div
      className={
        Object {
          "data-css-yp5sfk": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-9xm049": "",
          }
        }
      >
        <Ellipsis
          className=""
          ellipsis="..."
          rows={3}
        >
          Test Product
        </Ellipsis>
      </div>
      <div
        className={
          Object {
            "data-css-1f7wp8g": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-14jedxl": "",
            }
          }
        >
          Ready for pick up in 1-3 days in
        </div>
        <div
          className={
            Object {
              "data-css-hhr8nm": "",
            }
          }
        >
          13 Stores
        </div>
      </div>
    </div>
  </div>
</div>
`;
